--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
 		<div class="nav">
 			<div class="arrowLeft"></div>
-			<div class="square square1"></div>
-			<div class="square square2"></div>
-			<div class="square square3"></div>
-			<div class="square square4"></div>
-			<div class="square square5"></div>
+			<div class="square square1" id="square1"></div>
+			<div class="square square2" id="square2"></div>
+			<div class="square square3" id="square3"></div>
+			<div class="square square4" id="square4"></div>
+			<div class="square square5" id="square5"></div>
 			<div class="arrowRight"></div>
 		</div>
 	</div>
