--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<div class="centerImage"></div>
 			<div class="rightImage"></div>
 			<div class="videoHolder"></div>
-			<div class="cta cta1"></div>
-			<div class="cta cta2"></div>
+			<div class="cta cta1" id="cta_shopJeanJackets"></div>
+			<div class="cta cta2" id="cta_shopJeans"></div>
 		</div>
 
 		<div id="frame2" class="frame frame2">
@@ -25,7 +25,7 @@
 			<div class="centerImage"></div>
 			<div class="rightImage"></div>
 			<div class="videoHolder"></div>
-			<div class="cta cta1"></div>
+			<div class="cta cta1" id="cta_shopNow_activewear"></div>
 		</div>
 
 		<div id="frame3" class="frame frame3">
@@ -33,7 +33,7 @@
 			<div class="centerImage"></div>
 			<div class="rightImage"></div>
 			<div class="videoHolder"></div>
-			<div class="cta cta1"></div>
+			<div class="cta cta1" id="cta_shopNow_dresses"></div>
 		</div>
 
 		<div id="frame4" class="frame frame4">
@@ -41,16 +41,16 @@
 			<div class="centerImage"></div>
 			<div class="rightImage"></div>
 			<div class="videoHolder"></div>
-			<div class="cta cta1"></div>
-			<div class="cta cta2"></div>
+			<div class="cta cta1" id="cta_shopShoes"></div>
+			<div class="cta cta2" id="cta_shopHandbags"></div>
 		</div>
 
 		<div id="frame5" class="frame frame5">
 			<div class="headline"><img src="headline5.png" alt="headline5"></div>
 			<div class="centerImage"></div>
 			<div class="rightImage"></div>
-			<div class="cta cta1"></div>
-			<div class="cta cta2"></div>
+			<div class="cta cta1" id="cta_shopActivewear"></div>
+			<div class="cta cta2" id="cta_shopDenim"></div>
 		</div>
 
 		<div class="nav">
